fix spacing

--- a/public/profile/index.css
+++ b/public/profile/index.css
@@ -21,7 +21,7 @@ img {
     height: 200px;
 }
 
-p {
+.card p {
     height: 130px;
 }
 
